# notes-microservices

./: .gitignore  docker-compose.yml  requirements.txt
auth-service/: .env.sample  Dockerfile  pyproject.toml  requirements.txt  run.sh
auth-service/auth_service/: app.py  config.py  db.py  helpers.py  main.py
auth-service/auth_service/dtos/: user_login.py  user_signup.py
auth-service/auth_service/models/: user_model.py
notes-service/: .env  go.mod  go.sum  main.go
notes-service/controllers/: notes.controller.go
notes-service/initializers/: database.go
notes-service/migration/: migrate.go
notes-service/models/: notes.model.go
